--- a/frontend/index.html
+++ b/frontend/index.html
@@ -216,7 +216,9 @@
 
       .invoice-actions {
         display: flex;
+        flex-direction: column;
         align-items: center;
+        gap: 10px;
       }
 
       #stats-list {
@@ -351,13 +353,15 @@
 
         .invoice-actions {
           width: 100%;
-          justify-content: space-between;
+          flex-direction: column;
           align-items: center;
+          gap: 10px;
         }
 
         .invoice-amount {
           font-size: 1.2em;
           margin-bottom: 10px;
+          text-align: center;
         }
 
         .modal-content {
@@ -473,19 +477,19 @@
           font-size: 1.3em;
           font-weight: 700;
           color: var(--primary-color);
-          text-align: right;
+          text-align: center;
         }
 
         .invoice-actions {
-          flex-wrap: wrap;
-          gap: 10px;
+          flex-direction: column;
+          gap: 8px;
           margin-top: 10px;
+          align-items: center;
         }
 
         .btn-secondary,
         .btn-danger {
-          flex: 1;
-          min-width: 80px;
+          min-width: 100px;
           padding: 10px 15px;
           font-size: 13px;
           border-radius: 6px;
@@ -565,6 +569,28 @@
         color: black;
         text-decoration: none;
         cursor: pointer;
+      }
+
+      /* Loader styles */
+      .loader {
+        display: inline-block;
+        width: 14px;
+        height: 14px;
+        border: 2px solid #f3f3f3;
+        border-top: 2px solid #666;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+        margin-right: 5px;
+      }
+
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+
+      .btn.loading {
+        opacity: 0.7;
+        cursor: not-allowed;
       }
 
       #camera-view {
@@ -1018,6 +1044,12 @@
         if (e.target.classList.contains("btn-danger")) {
           const invoiceId = e.target.dataset.id;
           if (confirm("Are you sure you want to delete this invoice?")) {
+            // Show loading state
+            const originalText = e.target.textContent;
+            e.target.innerHTML = '<span class="loader"></span>Deleting...';
+            e.target.classList.add("loading");
+            e.target.disabled = true;
+
             try {
               const response = await fetch(`/api/invoice/${invoiceId}`, {
                 method: "DELETE",
@@ -1030,6 +1062,10 @@
               fetchStats(currentUser);
             } catch (error) {
               showMessage(error.message, "error");
+              // Restore button state on error
+              e.target.textContent = originalText;
+              e.target.classList.remove("loading");
+              e.target.disabled = false;
             }
           }
         } else if (e.target.classList.contains("btn-download")) {
